--- a/templates/index.html
+++ b/templates/index.html
@@ -57,6 +57,25 @@
   </form>
 
 
+<br>
+
+<h1>Enter Name to Search</h1>
+<form action="/read" method="post">
+
+    <div class="mb-3">
+         <label for="name" class="form-label">Name</label>
+           <input type="text" class="form-control"  name="rname">
+      
+       </div>
+       <button type="submit" class="btn btn-primary">Submit</button>
+
+  </form>
+
+
+
+
+
+
 
   </body>
 </html>
