--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,24 @@
 
     <div class="mb-3">
          <label for="name" class="form-label">Name</label>
-           <input type="text" class="form-control"  name="rname">
+           <input type="text" class="form-control"  name="name">
+      
+       </div>
+       <button type="submit" class="btn btn-primary">Submit</button>
+
+  </form>
+  <br>
+  <h1>Enter Address to Update</h1>
+<form action="/update" method="post">
+
+    <div class="mb-3">
+         <label for="name" class="form-label">Name</label>
+           <input type="text" class="form-control"  name="name">
+      
+       </div>
+       <div class="mb-3">
+         <label for="address" class="form-label">Enter new Address</label>
+           <input type="text" class="form-control"  name="address">
       
        </div>
        <button type="submit" class="btn btn-primary">Submit</button>
