--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,12 @@
 
     <form action="/create" method="post">
 
+     <div class="mb-3">
+         <label for="userid" class="form-label">Enter Your Unique user ID</label>
+           <input type="number" class="form-control"  name="userid">
+      
+       </div>
+
     <div class="mb-3">
          <label for="name" class="form-label">Name</label>
            <input type="text" class="form-control"  name="name">
@@ -82,6 +88,18 @@
        <div class="mb-3">
          <label for="address" class="form-label">Enter new Address</label>
            <input type="text" class="form-control"  name="address">
+      
+       </div>
+       <button type="submit" class="btn btn-primary">Submit</button>
+
+  </form>
+  <br>
+  <h1>Enter Name to Delete</h1>
+<form action="/delete" method="post">
+
+    <div class="mb-3">
+         <label for="name" class="form-label">Name</label>
+           <input type="text" class="form-control"  name="name">
       
        </div>
        <button type="submit" class="btn btn-primary">Submit</button>
