--- a/templates/index.html
+++ b/templates/index.html
@@ -76,18 +76,42 @@
        <button type="submit" class="btn btn-primary">Submit</button>
 
   </form>
-  <br>
-  <h1>Enter Address to Update</h1>
+
+
+<br>
+  <h1>Update Your Information Here</h1>
 <form action="/update" method="post">
 
     <div class="mb-3">
-         <label for="name" class="form-label">Name</label>
-           <input type="text" class="form-control"  name="name">
+         <label for="id" class="form-label">Enter Your Unique User ID</label>
+           <input type="number" class="form-control"  name="userid">
+
+           <br>
+<div class="container1">
       
-       </div>
+        <div class="col-sm-3">
+              <h5>Choose one Option</h5>
+             <select class="form-select form-select-lg mb-3 " aria-label=".form-select-lg example" name='fvalue'>
+        
+               <option value="1">Name</option>
+               <option value="2">Phone Number</option>
+               <option value="3">Email ID</option>
+               <option value="4">Address</option>
+        
+             </select>
+           </div>
+           
+    
+          </div>
+     
+
+
+
+
+      </div>
        <div class="mb-3">
-         <label for="address" class="form-label">Enter new Address</label>
-           <input type="text" class="form-control"  name="address">
+         <label for="info" class="form-label">Enter Updated Information</label>
+           <input type="text" class="form-control"  name="info">
       
        </div>
        <button type="submit" class="btn btn-primary">Submit</button>
