--- a/templates/error.html
+++ b/templates/error.html
@@ -4,17 +4,10 @@
 
 <div class="read1">
 <center>
-<h5> This Output is generated in JSON format directly from the MongoDB cluster.We are working on fixing the view style.</h5>
+<h5> This Unique ID is already in use .Please try with a different one.</h5>
 </center>
 </div>
 
-<div class="read2">
-<center>
-<h3>
-{{mdata}}
-</h3>
-</center>
-</div>
 
 {% endblock body %}
 
