--- a/templates/index.html
+++ b/templates/index.html
@@ -1,38 +1,34 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'base.html' %}
+{% block body %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Enter Your Details Here</h1>
+<div class="container1">
+<center>
+<h4>Developed by Debajyoti😎 & Arijit😁</h4>
+</center>
+</div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<div class="bio">
+<center>
+<h6>This CRUD web-application is directly connected with our MongoDB Atlas cluster(AWS-south Mumbai).<h6>
+<h6>This project is still incomplete.</h6>
+</center>
+</div>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-
-    <form action="/create" method="post">
+<div class="container2">
+<h1>Enter Your Information Here </h1>
+<form action="/create" method="post">
+    
 
      <div class="mb-3">
          <label for="userid" class="form-label">Enter Your Unique user ID</label>
            <input type="number" class="form-control"  name="userid">
+    
       
        </div>
 
-    <div class="mb-3">
+       <div class="mb-3">
          <label for="name" class="form-label">Name</label>
            <input type="text" class="form-control"  name="name">
       
@@ -47,38 +43,47 @@
        <div class="mb-3">
          <label for="exampleInputEmail1" class="form-label">Email address</label>
            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
-       <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+       <div id="emailHelp" class="form-text">Your email will be visible to everyone else.Dont enter original mail id.</div>
        </div>
 
         <div class="mb-3">
          <label for="address" class="form-label">Address</label>
            <input type="text" class="form-control"  name="address">
       
+        </div>
        </div>
 
   
-  
+  <div class="containerbtn">
   <button type="submit" class="btn btn-primary">Submit</button>
+  </div>
 
   </form>
 
 
 <br>
 
-<h1>Enter Name to Search</h1>
-<form action="/read" method="post">
+
+ <div class="container2">
+   <h1>View Your Information</h1>
+   <form action="/read" method="post">
 
     <div class="mb-3">
-         <label for="name" class="form-label">Name</label>
-           <input type="text" class="form-control"  name="name">
+         <label for="name" class="form-label">Enter Your Unique ID</label>
+           <input type="number" class="form-control"  name="id">
       
        </div>
+       </div>
+
+       <div class="containerbtn">
        <button type="submit" class="btn btn-primary">Submit</button>
+       </div>
 
   </form>
 
 
 <br>
+<div class="container2">
   <h1>Update Your Information Here</h1>
 <form action="/update" method="post">
 
@@ -114,27 +119,31 @@
            <input type="text" class="form-control"  name="info">
       
        </div>
+       </div>
+       <div class="containerbtn">
        <button type="submit" class="btn btn-primary">Submit</button>
-
+       </div>
   </form>
   <br>
-  <h1>Enter Name to Delete</h1>
+
+  <div class="container2">
+  <h1>Enter Unique User ID to Delete</h1>
 <form action="/delete" method="post">
 
     <div class="mb-3">
-         <label for="name" class="form-label">Name</label>
-           <input type="text" class="form-control"  name="name">
+         <label for="name" class="form-label">Enter the Unique UserID</label>
+           <input type="text" class="form-control"  name="uid">
       
        </div>
+       </div>
+       <div class="containerbtnend">
        <button type="submit" class="btn btn-primary">Submit</button>
+       </div>
 
   </form>
 
+<center>
+  <marquee><h6>Thanks for using our webapplication.For any suggestions please mail me "debajyoti0007@gmail.com"</h6></marquee>
+  </center>
 
-
-
-
-
-
-  </body>
-</html>
+{% endblock body %}
